# openlr_lens

./: Cargo.toml  Diagnosis.md  OpenLREngine.md  PreProcessing.md  WebFrontend.md
crates/openlr-codec/: Cargo.toml
crates/openlr-codec/src/: decoder.rs  lib.rs
crates/openlr-codec/src/decoder/: tpeg.rs  v3.rs
crates/openlr-engine/: Cargo.toml
crates/openlr-engine/src/: astar.rs  candidate.rs  diagnostics.rs  lib.rs  params.rs  route_generator.rs  tile_prefetch.rs  trace.rs  validation.rs  wkt.rs
crates/openlr-graph/src/: geometry.rs  graph.rs  lib.rs  node.rs  segment.rs  tile.rs
crates/openlr-provider/: Cargo.toml
crates/openlr-provider/src/: lib.rs  pmtiles.rs  tile_reader.rs
crates/openlr-wasm/src/: lib.rs
pipeline/schema/: osm-default.toml
pipeline/src/: build.rs  cli.rs  extent.rs  generic_low_memory.rs  http.rs  main.rs  merge.rs  osm_adapt.rs  osm_extract.rs  osm_low_memory.rs  osm_schema.rs  tile.rs
web/: package.json  vite.config.js
web/src/: App.css  App.jsx  hooks.js  llmClient.js  llmDiagnosis.js  main.js  replayEngine.js  store.js
web/src/components/: DecodeToast.jsx  LlmChatPanel.jsx  Map.jsx  MenuBar.jsx  ReplayPanel.jsx  ResultPanel.jsx  TopBar.jsx  TracePanel.jsx
web/src/llm/: SYSTEM_PROMPT.md  systemPrompt.js  tools.js
